# buddy-core

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: buddy_base.rs  buddy_err.rs  buddy_md_adapter_interface.rs  buddy_md_interface.rs  buddy_order.rs  lib.rs  utils.rs
tests/: logic_test.rs
