[package]
name = "buddy-core"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
bolero = "0.13.4"


# [dev-dependencies.cargo-husky]
# version = "1"
# default-features = false # Disable features which are enabled by default
# features = ["precommit-hook", "prepush-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]
